# MinecraftClone

./: CMakeLists.txt  README.md
libraries/: glad.c  stb_image.cpp
libraries/include/glad/: glad.h
res/shaders/: shader.fs  shader.vs
src/: Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Constants.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Terrain.cpp  Terrain.h  main.cpp
src/core/: Window.cpp  Window.h
